# life

./: draw.js  life.js  life_bg.wasm  main.js
wasm/: .gitignore  Cargo.toml  build.sh  life.rs
wasm/.cargo/: config.toml
