[package]
name = "life"
version = "0.1.0"
edition = "2018"

[dependencies]
wasm-bindgen = "0.2"
rustc-hash = "2.1"
rlsf = "0.2"

[lib]
crate-type = ["cdylib"]
path = "life.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
incremental = false

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false
