[package]
name = "life"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen = { version = "0.2", default-features = false, features = ["msrv"] }
rustc-hash = { version = "2.1", default-features = false, features = ["nightly"] }
rlsf = { version = "0.2", default-features = false, features = ["unstable"] }

[lib]
crate-type = ["cdylib"]
path = "life.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
incremental = false
opt-level = 3

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ["-O4", "-g"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--strip-producers", "--strip-target-features"]
